@@ -521,58 +521,6 @@ MPI_Op_free( MPI_Op* op )
     return return_val;
 }
 #endif
-#if HAVE( DECL_PMPI_REQUEST_GET_STATUS ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Request_get_status )
-/**
- * Measurement wrapper for MPI_Request_get_status
- * @note Auto-generated by wrapgen from template: SCOREP_Mpi_Std.w
- * @note C interface
- * @note Introduced with MPI-2
- * @ingroup misc
- * Triggers an enter and exit event.
- * It wraps the MPI_Request_get_status call with enter and exit events.
- */
-int
-MPI_Request_get_status( MPI_Request request, int* flag, MPI_Status* status )
-{
-    SCOREP_IN_MEASUREMENT_INCREMENT();
-    const int event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
-    const int event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_MISC );
-    int       return_val;
-
-    if ( event_gen_active )
-    {
-        SCOREP_MPI_EVENT_GEN_OFF();
-        if ( event_gen_active_for_group )
-        {
-            SCOREP_EnterWrappedRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_REQUEST_GET_STATUS ] );
-        }
-        else if ( SCOREP_IsUnwindingEnabled() )
-        {
-            SCOREP_EnterWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_REQUEST_GET_STATUS ] );
-        }
-    }
-
-    SCOREP_ENTER_WRAPPED_REGION();
-    return_val = PMPI_Request_get_status( request, flag, status );
-    SCOREP_EXIT_WRAPPED_REGION();
-
-    if ( event_gen_active )
-    {
-        if ( event_gen_active_for_group )
-        {
-            SCOREP_ExitRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_REQUEST_GET_STATUS ] );
-        }
-        else if ( SCOREP_IsUnwindingEnabled() )
-        {
-            SCOREP_ExitWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_REQUEST_GET_STATUS ] );
-        }
-        SCOREP_MPI_EVENT_GEN_ON();
-    }
-
-    SCOREP_IN_MEASUREMENT_DECREMENT();
-    return return_val;
-}
-#endif
 
 #if HAVE( DECL_PMPI_INFO_C2F ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Info_c2f )
 /**
