@@ -165,6 +165,7 @@ int MPI_Wait(MPI_Request* request,
   SCOREP_EXIT_WRAPPED_REGION();
 
   scorep_mpi_check_request(orig_req, status);
+  scorep_mpi_cleanup_request(orig_req);
 
   if (event_gen_active)
   {
@@ -237,6 +238,7 @@ int MPI_Waitall(int count,
     orig_req = scorep_mpi_saved_request_get(i);
 
     scorep_mpi_check_request(orig_req, &(array_of_statuses[i]));
+    scorep_mpi_cleanup_request(orig_req);
   }
   if (event_gen_active)
   {
@@ -314,6 +316,7 @@ int MPI_Waitany(int count,
         if (i == *index)
         {
           scorep_mpi_check_request(orig_req, status);
+          scorep_mpi_cleanup_request(orig_req);
         }
         else if (orig_req && ( orig_req->flags & SCOREP_MPI_REQUEST_FLAG_IS_ACTIVE))
           SCOREP_MpiRequestTested(orig_req->id);
@@ -323,6 +326,7 @@ int MPI_Waitany(int count,
     {
       orig_req   = scorep_mpi_saved_request_get(*index);
       scorep_mpi_check_request(orig_req, status);
+      scorep_mpi_cleanup_request(orig_req);
     }
 
   if (event_gen_active)
@@ -414,6 +418,7 @@ int MPI_Waitsome(int incount,
                 {
                   tmpstat               = array_of_statuses[cur];
                   scorep_mpi_check_request(orig_req, &(array_of_statuses[cur]));
+                  scorep_mpi_cleanup_request(orig_req);
                   array_of_statuses[j]  = tmpstat;
 
                   tmp                   = array_of_indices[cur];
@@ -435,6 +440,7 @@ int MPI_Waitsome(int incount,
         {
           orig_req = scorep_mpi_saved_request_get(array_of_indices[i]);
           scorep_mpi_check_request(orig_req, &(array_of_statuses[i]));
+          scorep_mpi_cleanup_request(orig_req);
         }
     }
 
@@ -510,6 +516,7 @@ int MPI_Test(MPI_Request* request,
   if (*flag)
     {
       scorep_mpi_check_request(orig_req, status);
+      scorep_mpi_cleanup_request(orig_req);
     }
   else if (orig_req && event_gen_active_for_group && xtest_active)
     {
@@ -601,6 +608,7 @@ int MPI_Testany(int count,
     {
       orig_req = scorep_mpi_saved_request_get(*index);
       scorep_mpi_check_request(orig_req, status);
+      scorep_mpi_cleanup_request(orig_req);
     }
   if (event_gen_active)
   {
@@ -676,6 +684,7 @@ int MPI_Testall(int count,
         {
           orig_req = scorep_mpi_saved_request_get(i);
           scorep_mpi_check_request(orig_req, &(array_of_statuses[i]));
+          scorep_mpi_cleanup_request(orig_req);
         }
     }
   else if (event_gen_active_for_group && xtest_active)
@@ -778,6 +787,7 @@ int MPI_Testsome(int incount,
                 {
                   tmpstat               = array_of_statuses[cur];
                   scorep_mpi_check_request(orig_req, &(array_of_statuses[cur]));
+                  scorep_mpi_cleanup_request(orig_req);
                   array_of_statuses[j]  = tmpstat;
 
                   tmp                   = array_of_indices[cur];
@@ -799,6 +809,7 @@ int MPI_Testsome(int incount,
         {
           orig_req = scorep_mpi_saved_request_get(array_of_indices[i]);
           scorep_mpi_check_request(orig_req, &(array_of_statuses[i]));
+          scorep_mpi_cleanup_request(orig_req);
         }
     }
 
@@ -1144,6 +1155,83 @@ int MPI_Cancel( MPI_Request* request )
     else if ( SCOREP_IsUnwindingEnabled() )
     {
       SCOREP_ExitWrapper(scorep_mpi_regions[SCOREP_MPI_REGION__MPI_CANCEL]);
+    }
+
+    SCOREP_MPI_EVENT_GEN_ON();
+  }
+
+  SCOREP_IN_MEASUREMENT_DECREMENT();
+  return return_val;
+}
+#endif
+
+#if HAVE(DECL_PMPI_REQUEST_GET_STATUS) && !defined(SCOREP_MPI_NO_REQUEST)
+/**
+ * Measurement wrapper for MPI_Request_get_status
+ * @note Manually adapted wrapper
+ * @note C interface
+ * @note Introduced with MPI-1
+ * @ingroup request
+ * Triggers an enter and exit event.
+ */
+int MPI_Request_get_status(MPI_Request request,
+             int* flag,
+             MPI_Status* status)
+{
+  SCOREP_IN_MEASUREMENT_INCREMENT();
+  const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
+  const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
+  const int           xtest_active               = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XREQTEST);
+  int                 return_val;
+  scorep_mpi_request* orig_req;
+  MPI_Status          mystatus;
+  uint64_t            start_time_stamp;
+
+  if (event_gen_active)
+  {
+    SCOREP_MPI_EVENT_GEN_OFF();
+
+    if (event_gen_active_for_group)
+    {
+      SCOREP_EnterWrappedRegion(scorep_mpi_regions[SCOREP_MPI_REGION__MPI_REQUEST_GET_STATUS]);
+    }
+    else if ( SCOREP_IsUnwindingEnabled() )
+    {
+      SCOREP_EnterWrapper(scorep_mpi_regions[SCOREP_MPI_REGION__MPI_REQUEST_GET_STATUS]);
+    }
+  }
+
+  if (status == MPI_STATUS_IGNORE)
+  {
+    status = &mystatus;
+  }
+  orig_req   = scorep_mpi_request_get(request);
+  SCOREP_ENTER_WRAPPED_REGION();
+  return_val = PMPI_Request_get_status(request, flag, status);
+  SCOREP_EXIT_WRAPPED_REGION();
+  if (*flag)
+  {
+    scorep_mpi_check_request(orig_req, status);
+    /* mark request as completed */
+    if ( orig_req )
+    {
+      orig_req->flags |= SCOREP_MPI_REQUEST_FLAG_IS_COMPLETED;
+    }
+  }
+  else if (orig_req && event_gen_active_for_group && xtest_active)
+  {
+    SCOREP_MpiRequestTested(orig_req->id);
+  }
+
+  if (event_gen_active)
+  {
+    if (event_gen_active_for_group)
+    {
+      SCOREP_ExitRegion(scorep_mpi_regions[SCOREP_MPI_REGION__MPI_REQUEST_GET_STATUS]);
+    }
+    else if ( SCOREP_IsUnwindingEnabled() )
+    {
+      SCOREP_ExitWrapper(scorep_mpi_regions[SCOREP_MPI_REGION__MPI_REQUEST_GET_STATUS]);
     }
 
     SCOREP_MPI_EVENT_GEN_ON();
